- bug #2983066 [interface] Flush table on table operations shows the query twice, 
  thanks to Martynas Mickevičius - BlinK_
- bug #2983060, patch #2987900 [interface] Fix initial state of tables in
  designer, thanks to Sutharshan Balachandren.
- bug #2983062, patch #2989408 [engines] Fix warnings when changing table
  engine to Maria, thanks to Madhura Jayaratne.

3.3.2.0 (2010-04-13)
- patch #2969449 [core] Name for MERGE engine varies depending on the
  MySQL version, thanks to Dieter Adriaenssens - ruleant
- bug #2966078 [browse] Incorrect LIMIT is saved and sticks while browsing
- bug #2967366 [Structure] Some results of Propose table structure are
  shown in hex
- bug #2967565 [insert] UNHEX not selected by default when inserting BINARY
- [navi] Changed link to git repository on main page
- bug #2972232 [menu] Import menu tab not present on main page
- patch #2976790 [menu] Go to the upper level after table DROP,
  thanks to Kaarel Nummert - kaarelnu
- patch #2978815 [pdf] Fix generating PDF with table dimensions, thanks to BlinK_
- patch #2977725 [export] XML wrongly encoded, thanks to Victor Volkov - hanut
- patch #2979234 [import] Create tables with current charset and collation.
- patch #2979234, bug #2960105 [import] Properly import unicode text from ODS.
- bug #2973280 [export] Proper handling of temporary directory in XLS export.
- bug #2980582 [interface] Properly format server status parameter.
- bug #2973949 [session] SQL History broken (revert patch #2899969),
  thanks to Dieter Adriaenssens - ruleant
- [doc] Be more specific about problems with Suhosin.

3.3.1.0 (2010-03-16)
- bug #2941037 [core] Database structure not sorted by table correctly 
- bug #2948492 [interface] Slide effect masks some fields on search page
- bug #2959746 [interface] Unknown table status: TABLE_TYPE 
- bug #2953050 [export] export VIEW as SQL includes INSERT statement 
- bug #2942032 [core] Cannot detect PmaAbsoluteUri correctly on Windows 